--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-streamlit
-datetime
-pandas
-yfinance 
-pandas_datareader
-io
+streamlit==1.11.0
+pandas==1.4.2
+yfinance==0.1.70
+openpyxl==3.0.9
+pytz==2022.1
+
